--- a/src/ArticleListItem/ArticleListItem.module.css
+++ b/src/ArticleListItem/ArticleListItem.module.css
@@ -1,4 +1,4 @@
-li {
+.li {
 	border-radius: 1em;
 	border: 1px solid red;
 	margin-bottom: 30px;
@@ -6,21 +6,12 @@ li {
 	list-style: none;
 	background-image: linear-gradient(to right, rgba(255, 0, 0,0.6), white 5%);
 } 
-h2 {
-	color: red;
 
-}
-button {
-	color: white;
-	background-color: red;
-	padding: 10px;
-	border-radius: 10px;
-}
-a {
+.link {
     color: red;
     text-decoration-color: red;
 }
-time {
+.time {
     font-weight: bold;
 }
 
