--- a/src/DynamicArticle/DynamicArticle.module.css
+++ b/src/DynamicArticle/DynamicArticle.module.css
@@ -1,7 +1,8 @@
-a {
+.link {
     font-weight: bold;
+    color: red;
 }
-div > article {
+.article {
     border-radius: 20px;
     margin-top: 10px;
     padding: 20px;
