--- a/src/ArticleListItem/ArticleListItem.module.css
+++ b/src/ArticleListItem/ArticleListItem.module.css
@@ -1,30 +1,44 @@
 .container {
-    background-image: linear-gradient(to right, rgba(204, 0, 0, .5), #eee 20% ) ;
-    border: 1px solid #c00;
-    border-radius: 10px;
-    box-shadow: 0 5px 10px 5px rgba(0, 0, 0, .3);
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 10px;
+	background-image: linear-gradient(to right, rgba(204, 0, 0, .5), #eee 20%);
+	border: 1px solid #c00;
+	border-radius: 10px;
+	box-shadow: 0 5px 10px 5px rgba(0, 0, 0, .3);
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 10px;
+	display: flex; 
+	flex-direction: column;
+	justify-content: space-between;
 }
 
-.container + .container {
-    margin-top: 30px;
+/* .article {
+	display: flex; 
+	flex-direction: column;
+	justify-content: space-between;
+} */
+
+.wrapper {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 .title {
-    color: #c00;
-    margin: 0 0 20px;
+	flex: 1;
+	color: #c00;
+	margin: 0 0 20px;
 }
 
 .text {
-    font-size: 12px;
-    margin: 0 0 20px;
+	font-size: 12px;
+	margin: 0 0 20px;
 }
 
 .time {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .link {
-    color: #c00;
+	color: #c00;
 }
