--- a/src/ArticleList/ArticleList.module.css
+++ b/src/ArticleList/ArticleList.module.css
@@ -1,12 +1,33 @@
 .container {
-  background: #999;
-  border: 1px dashed #666;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 5px rgba(204, 0, 0, 0.5);
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  list-style-type: none;
-  padding: 15px;
+	background: #999;
+	border: 1px dashed #666;
+	border-radius: 10px;
+	box-shadow: 0px 0px 10px 5px rgba(204, 0, 0, 0.5);
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 20px;
+	font-family: Arial, Helvetica, sans-serif;
+	list-style-type: none;
+	padding: 15px;
+}
+
+@media (max-width: 1200px) {
+	.container {
+		padding: 18px;
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+@media (max-width: 800px) {
+	.container {
+		grid-template-columns: repeat(2, 1fr);
+		padding: 20px;
+	}
+}
+
+@media (max-width: 400px) {
+	.container {
+		grid-template-columns: 1fr;
+		padding: 25px;
+	}
 }
