--- a/src/ArticleListItem/ArticleListItem.module.css
+++ b/src/ArticleListItem/ArticleListItem.module.css
@@ -28,10 +28,11 @@
       flex: 1;
       margin: 0 0 20px;
       color: #c00;
+      min-width: 50%;
   }
   
   .text {
-    font-size: 12px;
+    font-size: 18px;
     margin: 0 0 20px;
   }
   
@@ -42,3 +43,22 @@
   .link {
     color: #c00;
   }
+
+  @media (max-width: 1200px) {
+    .text {
+      font-size: 20px;
+    }
+  }
+  
+  @media (max-width: 800px) {
+    .text {
+      font-size: 22px;
+    }
+  }
+  
+  @media (max-width: 400px) {
+    .text {
+      font-size: 25px;
+    }
+  }
+  
